Fixed content box layout issue

--- a/public/style.css
+++ b/public/style.css
@@ -33,7 +33,7 @@ body,html {
 }
 
 #content {
-  height: calc(100vh - 55px - 44px);
+  min-height: calc(100vh - 55px - 44px);
   width: 100%;
   justify-content: center;
 }
@@ -62,7 +62,7 @@ body,html {
 /* Resume */
 
 #resume {
-  height: 100%;
+  min-height: calc(100vh - 55px - 44px);
   width: 100%;
 }
 
@@ -283,10 +283,12 @@ body,html {
 
 #navbar {
   position: fixed;
+  width: 100vw;
   height: 55px;
   z-index: 1;
   width: inherit;
   top: 0px;
+  left: 0px;
   background-color: white;
   border-bottom: 1px solid black;
 }
